--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,14 @@ input[type=checkbox]{
 .btn-link{
 	text-decoration: underline;
 }
-#editModal, #removeModal{
-	/*display: none;*/
+
+/*Marker`s infoWindow*/
+.infoWindowName{
+	background-color: #F2F2F2;
+	padding: 5px;
+	border-radius: 5px;
 }
+.infoWindowSector{}
 
 /* Header */
 header{
